# SIR_Monitore_ta_verdure

./: README.md  esp32ble.py
backend/: package-lock.json  package.json  server.js
central-hub/: setup_run.sh
central-hub/data-bridge/: data-bridge.py
central-hub/firmware-gateway/: firmware-gateway.ino
central-hub/iot-platform/: README.md  nginx.conf
central-hub/iot-platform/backend/: pyproject.toml
central-hub/iot-platform/backend/app/: database.py  websocket.py
central-hub/iot-platform/backend/app/auth/: __init__.py  jwt.py
central-hub/iot-platform/backend/app/common/: constants.py  discord_utils.py  utils.py
central-hub/iot-platform/backend/app/models/: __init__.py  metrics.py  settings.py
central-hub/iot-platform/backend/app/routers/: plants.py
central-hub/iot-platform/backend/app/schemas/: metrics.py  settings.py  websocket.py
code capteurs/: test.md
code capteurs/DHT11_LMT87/: DHT11_LMT87.ino
code capteurs/YL-69/: YL-69.ino
code capteurs/capacitive_soil_moisture_sensor/: capacitive_soil_moisture_sensor.ino
code capteurs/test/: test.ino
esp-32/main/: main.ino
esp-32/receive/: receive.ino
esp-32/send/: send.ino
firmware-sensors/: firmware-sensors.ino
frontend/: package-lock.json  package.json
frontend/public/: data.json
frontend/src/: App.js
frontend_firas/terrarium/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
main/: main.ino
raspberry-pi/: .env  README.md  docker-compose.yml  receive_data.py
raspberry-pi/backend/: .dockerignore  (+14 more)
send/: send.ino
(+244 files in other folders)
