[project]
name = "terrarium-backend"
version = "0.1.2-beta.1"
description = "FastAPI Backend: IoT System for Plant Monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.10.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
]

